@@ -2,9 +2,15 @@ THE LILYPOND.ORG WEBSITE
 
 SOURCES
 
-The HTML sources live in a CVS repository.  Get a fresh version here
+The HTML sources live in a CVS repository.  To get a fresh version run
 
-   cvs -d :ext:anoncvs@subversions.gnu.org:/cvsroot/lilypond co newweb
+    cvs -d :ext:anoncvs@subversions.gnu.org:/cvsroot/lilypond co newweb
+
+This will create the directory newweb.
+
+To update a previously fetched version, in the newweb direcotry run
+
+   cvs update -d
 
 
 BUILDING THE WEBSITE
@@ -29,6 +35,7 @@ REQUIREMENTS
     * python
     * make
     * gettext
+
 
 AT-VARIABLEs
 
@@ -77,7 +84,7 @@ lilypond.org):
 
 TRANSLATION
 
-Get the sources.  See the top of README.
+Get or update the sources.  See the top of README.
 
 
 TRANSLATE A PAGE
