@@ -22,7 +22,7 @@
   <a href="@IMAGES@nereid-shot.png"><img width="650" src="@IMAGES@nereid-shot.png"></a>
 </p>
 <p align="center">
-  <em>(click to enlarge)</em>
+  <em>(klik voor vergroting)</em>
 </p>
 
 
@@ -32,7 +32,7 @@ Notes are encoded with letters and numbers. Special commands are
 entered with backslashes.
 
 <p align="center">
-  <img src="@DEPTH@/graphics/annotate-example-1@.LANG@.png">
+  <img src="@DEPTH@/graphics/annotate-example-1">
   <br>
   <img src="@IMAGES@example-1.png">
 
@@ -43,9 +43,9 @@ entered with backslashes.
 </p>
 
 <p align="center">
-  <img src="@DEPTH@/graphics/annotate-example-2@.LANG@.png">
+  <img src="@DEPTH@/graphics/annotate-example-2.png">
   <br>
-  <img src="@IMAGES@example-2@.LANG@.png">
+  <img src="@IMAGES@example-2.png">
 </p>
 
 <h2>Pop music</h2>
@@ -55,7 +55,7 @@ entered with backslashes.
 </p>
 
 <p align="center">
-  <img src="@DEPTH@/graphics/annotate-example-lead@.LANG@.png">
+  <img src="@DEPTH@/graphics/annotate-example-lead.png">
   <br>
   <img src="@IMAGES@example-lead.png">
 </p>
@@ -70,7 +70,7 @@ entered with backslashes.
 </p>
 
 <p align=center>
-  <img src="@DEPTH@/graphics/annotate-example-parts@.LANG@.png">
+  <img src="@DEPTH@/graphics/annotate-example-parts.png">
   <br>
 </p>
 
@@ -80,7 +80,7 @@ entered with backslashes.
 </p>
 
 <p align=center>
-  <img src="@DEPTH@/graphics/annotate-example-single-part@.LANG@.png">
+  <img src="@DEPTH@/graphics/annotate-example-single-part.png">
   <br>
   <img src="@IMAGES@example-singlepart.png">
 </p>
@@ -90,7 +90,7 @@ entered with backslashes.
 </p>
 
 <p align="center">
-  <img src="@DEPTH@/graphics/annotate-example-score@.LANG@.png">
+  <img src="@DEPTH@/graphics/annotate-example-score.png">
   <br>
   <img src="@IMAGES@example-score.png">
 </p>
